--- a/docs/multiple-tests/no-crash/src/.stylelintrc
+++ b/docs/multiple-tests/no-crash/src/.stylelintrc
@@ -1,5 +1,8 @@
 {
+  "plugins": [
+		"@stylistic/stylelint-plugin"
+	],
   "rules": {
-    "color-hex-case": "lower"
+    "@stylistic/color-hex-case": "lower"
   }
 }
