--- a/docs/multiple-tests/with-config-file/src/.stylelintrc
+++ b/docs/multiple-tests/with-config-file/src/.stylelintrc
@@ -1,50 +1,55 @@
 {
-  "extends": "stylelint-config-standard",
+  "extends": [
+    "stylelint-config-standard"
+  ],
+  "plugins": [
+		"@stylistic/stylelint-plugin"
+	],
   "rules": {
-    "color-hex-case": "lower",
+    "@stylistic/block-closing-brace-empty-line-before": "never",
+    "@stylistic/block-closing-brace-newline-before": "always",
+    "block-no-empty": true,
+    "@stylistic/block-opening-brace-newline-after": "always",
+    "@stylistic/color-hex-case": "lower",
     "color-named": "never" ,
     "color-no-invalid-hex": true,
-    "font-weight-notation": "numeric",
-    "function-calc-no-unspaced-operator": true,
-    "function-comma-newline-after": "never-multi-line",
-    "function-comma-space-after": "always",
-    "function-comma-space-before": "never",
-    "function-linear-gradient-no-nonstandard-direction": true,
-    "function-name-case": "lower",
-    "function-parentheses-newline-inside": "never-multi-line",
-    "function-parentheses-space-inside": "never",
-    "function-url-scheme-disallowed-list": "data",
-    "function-url-no-scheme-relative": true,
-    "function-url-quotes": "always",
-    "function-whitespace-after": "always",
-    "number-leading-zero": "never",
-    "number-no-trailing-zeros": true,
-    "string-no-newline": true,
-    "string-quotes": "single",
-    "time-min-milliseconds": 100,
-    "unit-case": "lower",
-    "unit-no-unknown": true,
-    "value-keyword-case": "lower",
-    "shorthand-property-no-redundant-values": true,
-    "property-case": "lower",
-    "property-no-unknown": true,
-    "declaration-bang-space-after": "never",
-    "declaration-bang-space-before": "always",
-    "declaration-colon-newline-after": "always-multi-line",
-    "declaration-colon-space-after": "always",
-    "declaration-colon-space-before": "never",
-    "declaration-empty-line-before": "never",
-    "declaration-no-important": true,
+    "@stylistic/declaration-bang-space-after": "never",
+    "@stylistic/declaration-bang-space-before": "always",
     "declaration-block-no-duplicate-properties": true,
     "declaration-block-no-redundant-longhand-properties": true,
     "declaration-block-no-shorthand-property-overrides": true,
-    "declaration-block-semicolon-newline-after": "always",
+    "@stylistic/declaration-block-semicolon-newline-after": "always",
     "declaration-block-single-line-max-declarations": 1,
-    "declaration-block-trailing-semicolon": "always",
-    "block-closing-brace-empty-line-before": "never",
-    "block-no-empty": true,
-    "block-opening-brace-newline-after": "always",
-    "block-closing-brace-newline-before": "always"
+    "@stylistic/declaration-block-trailing-semicolon": "always",
+    "@stylistic/declaration-colon-newline-after": "always-multi-line",
+    "@stylistic/declaration-colon-space-after": "always",
+    "@stylistic/declaration-colon-space-before": "never",
+    "declaration-empty-line-before": "never",
+    "declaration-no-important": true,
+    "font-weight-notation": "numeric",
+    "function-calc-no-unspaced-operator": true,
+    "@stylistic/function-comma-newline-after": "never-multi-line",
+    "@stylistic/function-comma-space-after": "always",
+    "@stylistic/function-comma-space-before": "never",
+    "function-linear-gradient-no-nonstandard-direction": true,
+    "function-name-case": "lower",
+    "@stylistic/function-parentheses-newline-inside": "never-multi-line",
+    "@stylistic/function-parentheses-space-inside": "never",
+    "function-url-scheme-disallowed-list": "data",
+    "function-url-no-scheme-relative": true,
+    "function-url-quotes": "always",
+    "@stylistic/function-whitespace-after": "always",
+    "@stylistic/number-leading-zero": "never",
+    "@stylistic/number-no-trailing-zeros": true,
+    "@stylistic/property-case": "lower",
+    "property-no-unknown": true,
+    "shorthand-property-no-redundant-values": true,
+    "string-no-newline": true,
+    "@stylistic/string-quotes": "single",
+    "time-min-milliseconds": 100,
+    "@stylistic/unit-case": "lower",
+    "unit-no-unknown": true,
+    "value-keyword-case": "lower"
   },
   "overrides": [
     {
