--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss-syntax": "^0.36.2",
     "prettier": "^3.3.2",
     "stylelint": "^16.6.1",
+    "stylelint-a11y": "^1.2.3",
     "stylelint-config-css-modules": "^4.4.0",
     "stylelint-config-sass-guidelines": "^11.1.0",
     "stylelint-config-standard": "^36.0.0",
